--- a/about.html
+++ b/about.html
@@ -41,7 +41,7 @@
             </div>
         </div>
     </main>
-    <footer class="rodape">
+    <footer id="rodape__about" class="rodape">
         <h2>Obrigado por escolher a Visões</h2>
         <p>Desenvolvido por Thiago Dantas em 2023</p>
     </footer>
