--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                 <h2 class="meio__apresentacao__texto">Deseja sair em uma aventura, mas acha que não conseguirá enfretar os perigos?</h2>
                 <p class="meio__apresentacao__texto">Na Visões LTDA, você consegue uma visão, com a moldura de sua nação, e do elemento de seu agrado, para seguir em sua aventura. Deseja também uma arma para se proteger? Aqui nós temos!</p>
             </div>
-            <img src="./assets/D_NQ_NP_714901-MLB54100472520_032023-O-removebg-preview.png" alt="elementos">
+            <img class="meio__apresentacao__imagem" src="./assets/D_NQ_NP_714901-MLB54100472520_032023-O-removebg-preview.png" alt="elementos">
         </div>
     </main>
-    <footer class="rodape">
+    <footer id="rodape__index" class="rodape">
         <h2>Obrigado por escolher a Visões</h2>
         <p>Desenvolvido por Thiago Dantas em 2023</p>
     </footer>
