--- a/products.html
+++ b/products.html
@@ -12,7 +12,7 @@
             <a class="cabecalho__link__links" href="index.html">Home</a>
             <a class="cabecalho__link__links" href="about.html">Sobre</a>
             <div class="dropdown">
-                <a class="cabecalho__link__links" href="products.html">Nossos Produtos</a>
+                <p class="cabecalho__link__links">Nossos Produtos</p>
                 <div class="dropdown__content">
                     <a href="#Mondstadt">Mondstadt</a>
                     <a href="#Liyue">Liyue</a>
