--- a/contact.html
+++ b/contact.html
@@ -45,7 +45,7 @@
                 <a href="https://www.instagram.com/thiagoabreu010/" target="_blank"><img class="meio__contato__imagens" src="./assets/icone-instagram.png" alt="Ícone do Instagram"></a>
         </div>
     </main>
-    <footer class="rodape">
+    <footer id="rodape__contact" class="rodape">
         <h2>Obrigado por escolher a Visões</h2>
         <p>Desenvolvido por Thiago Dantas em 2023</p>
     </footer>
